starter/network.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CD12352 - Infrastructure as Code Project - Network

Parameters:
  VpcCidr:
    Description: Enter the CIDR block for the VPC
    Type: String
  PubSubnetCidr1:
    Description: Enter the CIDR block for public subnet 1
    Type: String
  PubSubnetCidr2:
    Description: Enter the CIDR block for public subnet 2
    Type: String
  PriSubnetCidr1:
    Description: Enter the CIDR block for private subnet 1
    Type: String
  PriSubnetCidr2:
    Description: Enter the CIDR block for private subnet 2
    Type: String
  #   Default: 10.0.0.0/16
  AZID1:
    Description: Availabity-zone 1
    Type: String
  AZID2:
    Description: Availabity-zone 2
    Type: String
  
Resources:
  #---------- VPC
  NetworkVpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: NetworkVpc
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !Ref PubSubnetCidr1
      VpcId: !Ref NetworkVpc
      AvailabilityZone: !Ref AZID1
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !Ref PriSubnetCidr1
      VpcId: !Ref NetworkVpc
      AvailabilityZone: !Ref AZID1
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !Ref PubSubnetCidr2
      VpcId: !Ref NetworkVpc
      AvailabilityZone: !Ref AZID2
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !Ref PriSubnetCidr2
      VpcId: !Ref NetworkVpc
      AvailabilityZone: !Ref AZID2
  
  #------------- IGW 
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: UdacityIGW
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref NetworkVpc
  
  #----------- Public Route Table
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref NetworkVpc 
      Tags:
        - Key: Name
          Value: UdacityRouteTable
  PublicSubnetAttachRoutTable1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicSubnetAttachRoutTable2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  PublicRoute1:
    Type: AWS::EC2::Route
    DependsOn: 
      - IGWAttach
      - PublicSubnetAttachRoutTable1
      - PublicSubnetAttachRoutTable2
    Properties:
       RouteTableId: !Ref PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway

  #---------------- Nat gatway
  NatGW1:
    Type: AWS::EC2::NatGateway
    Properties:
      ConnectivityType: private
      SubnetId: !Ref PublicSubnet1
      Tags: 
        - Key: Name
          Value: NatGW1
  NatGW2:
    Type: AWS::EC2::NatGateway
    Properties:
      ConnectivityType: private
      SubnetId: !Ref PublicSubnet2
      Tags: 
        - Key: Name
          Value: NatGW2
  
  #------- Private Route Table
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref NetworkVpc 
      Tags:
        - Key: Name
          Value: UdacityPrivateRouteTable1
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref NetworkVpc 
      Tags:
        - Key: Name
          Value: UdacityPrivateRouteTable2
  PrivateSubnetAttachPrivateRouteTable1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnetAttachPrivateRouteTable2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2
  PrivateRoute1:
    Type: AWS::EC2::Route
    DependsOn: 
      - PrivateSubnetAttachPrivateRouteTable1
    Properties:
       RouteTableId: !Ref PrivateRouteTable1
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId: !Ref NatGW1
  PrivateRoute2:
    Type: AWS::EC2::Route
    DependsOn: 
      - PrivateSubnetAttachPrivateRouteTable2
    Properties:
       RouteTableId: !Ref PrivateRouteTable2
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId: !Ref NatGW2
        
Outputs:
  VpcId:
    Description: The VPC ID
    Value: !Ref NetworkVpc
  PublicSubnet1:
    Description: The public subnet 1
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: The public subnet 2
    Value: !Ref PublicSubnet2
  PrivateSubnet1:
    Description: The private subnet 1
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnet1'
  PrivateSubnet2:
    Description: The private subnet 2
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnet2'
  PrivateSubnets:
    Description: IDs Of Private Subnets
    Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
    Export: 
      Name: !Sub ${AWS::StackName}-PrivateSubnets
